outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-3875505004254498876_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, and global path optimization by incorporating a reinforcement learning-inspired scoring system with decaying weights for past selections and a probabilistic selection based on normalized scores, while preserving the original penalty for nodes near the destination.}
                                                                                                                                                                                                                                                                                        ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, and global path optimization by incorporating a reinforcement learning-inspired scoring system with decaying weights for past selections and a probabilistic selection based on normalized scores, while preserving the original penalty for nodes near the destination.}
                                                                                                                                                                                                                                                                                        ^
SyntaxError: unmatched '}'
